initial migration completed.

--- a/repository/repository-web/src/main/resources/static/index.html
+++ b/repository/repository-web/src/main/resources/static/index.html
@@ -38,6 +38,9 @@
 <script type="text/javascript" src="webjars/angular-ui-bootstrap/ui-bootstrap.min.js"></script>
 <script type="text/javascript" src="webjars/angular-ui-bootstrap/ui-bootstrap-tpls.min.js"></script>
 
+<link rel="stylesheet" href="webjars/ng-prettyjson/dist/ng-prettyjson.min.css">
+<script src="webjars/ng-prettyjson/dist/ng-prettyjson.min.js"></script>
+
 <!-- ACE Editor -->
 <script type="text/javascript" src="webjars/ace/src-min-noconflict/ace.js"></script>
 <script type="text/javascript" src="webjars/angular-ui-ace/ui-ace.min.js"></script>
@@ -57,6 +60,7 @@
 <script type="text/javascript" src="js/controllers/settingsController.js"></script>
 <script type="text/javascript" src="js/controllers/updateController.js"></script>
 <script type="text/javascript" src="js/controllers/signUpController.js"></script>
+<script type="text/javascript" src="js/controllers/mapping/mappingbuilder-controller.js"></script>
 
 
 <!-- Service -->
